--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       href="./styles/style.scss"
     />
   </head>
+
   <body class="page__body">
 
     <div class="home-page" id="home-page">
@@ -29,25 +30,40 @@
             >
           </a>
 
+          <a href="#menu" class="icon icon--menu"></a>
+
+        </div>
+      </header>
+
+      <header class="header-desktop">
+        <div class="header-desktop__container">
+          <a href="#home-page" class="header__link">
+            <img
+              class="header__logo"
+              src="./images/Bakerlab.svg"
+              alt="logo Bakerlab"
+            >
+          </a>
+
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="products" class="nav__link">Products</a>
+                <a href="#products" class="nav__link">Products</a>
               </li>
               <li class="nav__item">
-                <a href="about-us" class="nav__link">About Us</a>
+                <a href="#about-us" class="nav__link">About Us</a>
               </li>
               <li class="nav__item">
-                <a href="blog" class="nav__link">Blog</a>
+                <a href="#blog" class="nav__link">Blog</a>
               </li>
-              <li class="nav__item nav__item--contact">
-                <a href="contact-us" class="nav__link">Contact us</a>
+              <li class="nav__item">
+                <a href="#contact-us" class="nav__link nav__link--contact">
+                  <img src="./images/icons/Icon-phone.svg" alt="phone">
+                  <span>Contact us</span>
+                </a>
               </li>
             </ul>
           </nav>
-
-          <a href="#menu" class="icon icon--menu"></a>
-
         </div>
       </header>
 
@@ -115,7 +131,7 @@
           </div>
 
           <div class="products__container-card">
-            <div class="products-card">
+            <div class="products-card products-card--one">
               <img
                 class="products-card__photo"
                 src="./images/photo-product-01.png"
@@ -134,7 +150,7 @@
                 <span>Order</span>
               </a>
             </div>
-            <div class="products-card">
+            <div class="products-card products-card--two">
               <img
                 class="products-card__photo"
                 src="./images/photo-product-02.png"
@@ -153,7 +169,7 @@
                 <span>Order</span>
               </a>
             </div>
-            <div class="products-card">
+            <div class="products-card products-card--three">
               <img
                 class="products-card__photo"
                 src="./images/photo-product-03.png"
@@ -172,7 +188,7 @@
                 <span>Order</span>
               </a>
             </div>
-            <div class="products-card">
+            <div class="products-card products-card--four">
               <img
                 class="products-card__photo"
                 src="./images/photo-product-04.png"
@@ -191,7 +207,7 @@
                 <span>Order</span>
               </a>
             </div>
-            <div class="products-card">
+            <div class="products-card products-card--five">
               <img
                 class="products-card__photo"
                 src="./images/photo-product-05.png"
@@ -210,7 +226,7 @@
                 <span>Order</span>
               </a>
             </div>
-            <div class="products-card">
+            <div class="products-card products-card--six">
               <img
                 class="products-card__photo"
                 src="./images/photo-product-06.png"
@@ -239,14 +255,8 @@
             <p class="about-us__description">Like many design teams, Onfido made the transition from Abstract + Sketch, to Figma in the last couple of years. One of the common resistance points internally before making that switch, was Figma’s lack of Git-style branching that Abstract enabled. The design team had come to rely on branching and had built a lot of our processes around it.</p>
           </div>
 
-
-
           <div class="about-us__container-stats">
-            <img
-            class="about-us__photo"
-            src="./images/Crumbs.png"
-            alt="crumbs"
-          >
+
             <div class="stats">
 
               <div class="stats__block stats__block-year">
@@ -270,9 +280,6 @@
               </div>
             </div>
           </div>
-
-
-
         </section>
       </div>
     </main>
@@ -281,7 +288,7 @@
 
       <div class="footer__content">
         <img
-          class="header__logo"
+          class="footer__logo"
           src="./images/Logo-footer.svg"
           alt="Bakerlab"
         >
@@ -309,30 +316,30 @@
 
         <section class="contact-us" id="contact-us">
           <h2 class="contact-us__title">Contact us</h2>
-
-          <div class="call">
-            <span class="call__name">Call us</span>
-            <a href="tell:(629) 555-0129" class="call__link">(629) 555-0129</a>
-            <a href="tell:(603) 555-0123" class="call__link">(603) 555-0123</a>
-            <a href="tell:(704) 555-0127" class="call__link">(704) 555-0127</a>
-          </div>
-
-
-          <div class="email">
-            <span class="email__name">Email us</span>
-            <a href="email:bakerlab@example.com" class="email__link">bakerlab@example.com</a>
-          </div>
-
-          <div class="blog" id="blog">
-            <a href="#" class="icon icon-facebook"></a>
-            <a href="#" class="icon icon-instagram"></a>
-            <a href="#" class="icon icon-twitter"></a>
-          </div>
-
-          <div class="privacy" id="terms-privacy">
-            <a href="#" class="privacy__link">© Bakerlab 2022</a>
-          </div>
         </section>
+
+        <div class="call">
+          <span class="call__name">Call us</span>
+          <a href="tell:(629) 555-0129" class="call__link">(629) 555-0129</a>
+          <a href="tell:(603) 555-0123" class="call__link">(603) 555-0123</a>
+          <a href="tell:(704) 555-0127" class="call__link">(704) 555-0127</a>
+        </div>
+
+
+        <div class="email">
+          <span class="email__name">Email us</span>
+          <a href="email:bakerlab@example.com" class="email__link">bakerlab@example.com</a>
+        </div>
+
+        <div class="blog" id="blog">
+          <a href="#" class="icon icon-facebook"></a>
+          <a href="#" class="icon icon-instagram"></a>
+          <a href="#" class="icon icon-twitter"></a>
+        </div>
+
+        <div class="privacy" id="terms-privacy">
+          <a href="#" class="privacy__link">© Bakerlab 2022</a>
+        </div>
       </div>
     </footer>
   </body>
