--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     />
     <title>Bakerlab</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+          crossorigin = "use-credentials">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
@@ -320,21 +321,32 @@
 
         <div class="call">
           <span class="call__name">Call us</span>
-          <a href="tell:(629) 555-0129" class="call__link">(629) 555-0129</a>
-          <a href="tell:(603) 555-0123" class="call__link">(603) 555-0123</a>
-          <a href="tell:(704) 555-0127" class="call__link">(704) 555-0127</a>
+          <a href="tel:+6295550129" class="call__link">(629) 555-0129</a>
+          <a href="tel:+6035550123" class="call__link">(603) 555-0123</a>
+          <a href="tel:+7045550127" class="call__link">(704) 555-0127</a>
         </div>
 
 
         <div class="email">
           <span class="email__name">Email us</span>
-          <a href="email:bakerlab@example.com" class="email__link">bakerlab@example.com</a>
+          <a href="mailto:bakerlab@example.com" class="email__link">bakerlab@example.com</a>
         </div>
 
         <div class="blog" id="blog">
-          <a href="#" class="icon icon-facebook"></a>
-          <a href="#" class="icon icon-instagram"></a>
-          <a href="#" class="icon icon-twitter"></a>
+          <a href="https://www.facebook.com/login/?locale=uk_UA"
+             target="_blank"
+             class="icon icon-facebook">
+          </a>
+
+          <a href="https://www.instagram.com/"
+             target="_blank"
+             class="icon icon-instagram">
+          </a>
+
+          <a href="https://x.com/"
+             target="_blank"
+             class="icon icon-twitter">
+          </a>
         </div>
 
         <div class="privacy" id="terms-privacy">
