--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Bakerlab</title>
+    <link rel="icon" type="image/x-icon"
+          href="./images/1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com"
           crossorigin = "use-credentials">
@@ -288,11 +290,13 @@
     <footer class="footer">
 
       <div class="footer__content">
-        <img
-          class="footer__logo"
-          src="./images/Logo-footer.svg"
-          alt="Bakerlab"
-        >
+        <a href="#" class="home__link">
+          <img
+            class="footer__logo"
+            src="./images/Logo-footer.svg"
+            alt="Bakerlab"
+          >
+        </a>
         <div class="footer__menu">
           <nav class="nav-footer">
             <ul class="nav-footer__list">
