--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,452 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link
+      rel="shortcut icon"
+      href="images/favicon.svg"
+      type="image/x-icon"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/style.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="header">
+      <div class="container--wide">
+        <div class="top-bar">
+          <a
+            href="#"
+            class="logo top-bar__logo"
+          >
+            <svg class="logo__img">
+              <use href="images/sprite.svg#logo"></use>
+            </svg>
+          </a>
+          <div class="top-bar__menu">
+            <nav class="nav top-bar__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#products"
+                    class="nav__link"
+                  >
+                    Products
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#about"
+                    class="nav__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#"
+                    class="nav__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <a
+              href="#contacts"
+              class="top-bar__phone-btn"
+            >
+              <svg class="top-bar__phone-btn-img">
+                <use href="images/sprite.svg/#phone-icon"></use>
+              </svg>
+              Contact Us
+            </a>
+          </div>
+          <button
+            class="top-bar__menu-btn"
+            type="button"
+          ></button>
+        </div>
+      </div>
+      <div class="container">
+        <div class="header__content">
+          <p class="header__text">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </p>
+          <h1 class="header__title">Creative bakery</h1>
+          <img
+            src="images/cookie-bg.png"
+            alt="cookie"
+            class="header__bg"
+          />
+          <a
+            href="#about"
+            class="header__btn"
+          >
+            <svg class="header__btn-img">
+              <use href="images/sprite.svg/#cookie-icon"></use>
+            </svg>
+            Learn More
+          </a>
+        </div>
+      </div>
+    </header>
+    <aside class="page__menu menu">
+      <div class="container">
+        <div class="menu__content"></div>
+      </div>
+    </aside>
+    <main class="main">
+      <section
+        class="products"
+        id="products"
+      >
+        <div class="container">
+          <h2 class="products__title">What we bake</h2>
+          <p class="products__text">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+          <div class="products__content">
+            <article class="products__item card">
+              <img
+                src="images/products/photo-product-01.jpg"
+                alt="product photo"
+                class="card__img"
+              />
+              <span class="card__category">Cakes</span>
+              <p class="card__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#contacts"
+                class="card__button"
+              >
+                <svg class="card__button-img">
+                  <use href="images/sprite.svg/#arrow-icon"></use>
+                </svg>
+                Order
+              </a>
+            </article>
+
+            <article class="products__item card">
+              <img
+                src="images/products/photo-product-02.jpg"
+                alt="product photo"
+                class="card__img"
+              />
+              <span class="card__category">Cakes</span>
+              <p class="card__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+              <a
+                href="#contacts"
+                class="card__button"
+              >
+                <svg class="card__button-img">
+                  <use href="images/sprite.svg/#arrow-icon"></use>
+                </svg>
+                Order
+              </a>
+            </article>
+
+            <article class="products__item card">
+              <img
+                src="images/products/photo-product-03.jpg"
+                alt="product photo"
+                class="card__img"
+              />
+              <span class="card__category">Donuts</span>
+              <p class="card__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+              <a
+                href="#contacts"
+                class="card__button"
+              >
+                <svg class="card__button-img">
+                  <use href="images/sprite.svg/#arrow-icon"></use>
+                </svg>
+                Order
+              </a>
+            </article>
+
+            <article class="products__item card">
+              <img
+                src="images/products/photo-product-04.jpg"
+                alt="product photo"
+                class="card__img"
+              />
+              <span class="card__category">Donuts</span>
+              <p class="card__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+              <a
+                href="#contacts"
+                class="card__button"
+              >
+                <svg class="card__button-img">
+                  <use href="images/sprite.svg/#arrow-icon"></use>
+                </svg>
+                Order
+              </a>
+            </article>
+
+            <article class="products__item card">
+              <img
+                src="images/products/photo-product-05.jpg"
+                alt="product photo"
+                class="card__img"
+              />
+              <span class="card__category">Cakes</span>
+              <p class="card__description">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+              <a
+                href="#contacts"
+                class="card__button"
+              >
+                <svg class="card__button-img">
+                  <use href="images/sprite.svg/#arrow-icon"></use>
+                </svg>
+                Order
+              </a>
+            </article>
+
+            <article class="products__item card">
+              <img
+                src="images/products/photo-product-06.jpg"
+                alt="product photo"
+                class="card__img"
+              />
+              <span class="card__category">Cookies</span>
+              <p class="card__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#contacts"
+                class="card__button"
+              >
+                <svg class="card__button-img">
+                  <use href="images/sprite.svg/#arrow-icon"></use>
+                </svg>
+                Order
+              </a>
+            </article>
+          </div>
+        </div>
+      </section>
+      <section
+        class="about"
+        id="about"
+      >
+        <div class="container">
+          <div class="about__content">
+            <h2 class="about__title">Few words About us</h2>
+            <p class="about__text">
+              Like many design teams, Onfido made the transition from Abstract +
+              Sketch, to Figma in the last couple of years. One of the common
+              resistance points internally before making that switch, was
+              Figma’s lack of Git-style branching that Abstract enabled. The
+              design team had come to rely on branching and had built a lot of
+              our processes around it.
+            </p>
+            <ul class="about__list">
+              <li class="about__item">
+                <span class="about__statistics">2015</span>
+                <span class="about__description">Foundation year</span>
+              </li>
+
+              <li class="about__item">
+                <span class="about__statistics">23</span>
+                <span class="about__description">Stores</span>
+              </li>
+
+              <li class="about__item">
+                <span class="about__statistics">155</span>
+                <span class="about__description">Companies</span>
+              </li>
+
+              <li class="about__item">
+                <span class="about__statistics">
+                  10k
+                  <span class="about__statistics-plus">+</span>
+                </span>
+                <span class="about__description">Clients</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__top">
+          <div class="footer__nav">
+            <a
+              href="#"
+              class="footer__logo logo"
+            >
+              <svg class="footer__logo-img logo__img">
+                <use href="images/sprite.svg#logo"></use>
+              </svg>
+            </a>
+            <h4 class="footer__nav-title">Menu</h4>
+            <ul class="footer__nav-list">
+              <li class="footer__nav-item">
+                <a
+                  href="#products"
+                  class="footer__nav-link"
+                >
+                  Products
+                </a>
+              </li>
+
+              <li class="footer__nav-item">
+                <a
+                  href="#about"
+                  class="footer__nav-link"
+                >
+                  About Us
+                </a>
+              </li>
+
+              <li class="footer__nav-item">
+                <a
+                  href="#"
+                  class="footer__nav-link"
+                >
+                  Blog
+                </a>
+              </li>
+
+              <li class="footer__nav-item">
+                <a
+                  href="#"
+                  class="footer__nav-link"
+                >
+                  Terms & Privacy
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div
+            class="footer__contacts contacts"
+            id="contacts"
+          >
+            <h2 class="contacts__title">Contact Us</h2>
+            <div class="contacts__phones">
+              <h4 class="contacts__phones-title">Call Us</h4>
+              <ul class="contacts__phones-list">
+                <li class="contacts__phones-item">
+                  <a
+                    href="tel:(629) 555-0129"
+                    class="contacts__phones-link"
+                  >
+                    (629) 555-0129
+                  </a>
+                </li>
+
+                <li class="contacts__phones-item">
+                  <a
+                    href="tel:(603) 555-0123"
+                    class="contacts__phones-link"
+                  >
+                    (603) 555-0123
+                  </a>
+                </li>
+
+                <li class="contacts__phones-item">
+                  <a
+                    href="tel:(704) 555-0127"
+                    class="contacts__phones-link"
+                  >
+                    (704) 555-0127
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="contacts__email">
+              <h4 class="contacts__email-title">Email Us</h4>
+              <a
+                href="email:bakerlab@example.com"
+                class="contacts__email-link"
+              >
+                bakerlab@example.com
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <ul class="footer__socials">
+            <li class="footer__social-item">
+              <a
+                href="https://facebook.com"
+                class="footer__social-link"
+                target="_blank"
+              >
+                <svg class="footer__social-img">
+                  <use href="images/sprite.svg#facebook-icon"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="footer__social-item">
+              <a
+                href="https://instagram.com"
+                class="footer__social-link"
+                target="_blank"
+              >
+                <svg class="footer__social-img">
+                  <use href="images/sprite.svg#instagram-icon"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="footer__social-item">
+              <a
+                href="https://twitter.com"
+                class="footer__social-link"
+                target="_blank"
+              >
+                <svg class="footer__social-img">
+                  <use href="images/sprite.svg#twitter-icon"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <span class="footer__copyright">© Bakerlab 2022</span>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
