--- a/src/index.html
+++ b/src/index.html
@@ -71,14 +71,10 @@
                 class="nav__link"
                 href="#contact_us"
               >
-                <div class="nav__contact-us">
-                  <img
-                    src="images/icons/icon-phone.png"
-                    class="icon--phone"
-                    alt="phone"
-                  >
-                  Contact Us
-                </div>
+                <img
+                  src="images/Button-contact-us.svg"
+                  alt="Contact us"
+                />
               </a>
             </li>
           </ul>
@@ -90,17 +86,14 @@
         ></a>
       </div>
 
-      <div class="header__bottom">
+      <div class="grid">
         <h2 class="header__slogan">
           We bake your fantasies - croissants, cakes, cookies, and cupcakes.
         </h2>
+
         <h1 class="header__title">Creative Bakery</h1>
-        <img
-          class="header__picture"
-          src="images/Cookie.png"
-          alt="Header picture"
-        />
-        <button class="header__button"></button>
+
+        <a class="header__button">Learn more</a>
       </div>
     </header>
 
@@ -108,7 +101,6 @@
       class="page__menu menu"
       id="menu"
     >
-      <!-- <div class="menu__content"> -->
       <div class="top-bar">
         <a href="#">
           <img
@@ -152,22 +144,17 @@
           </li>
           <li class="nav__item nav__item--aside">
             <a
-               class="nav__link"
+              class="nav__link"
               href="#contact_us"
             >
-              <div class="nav__contact-us">
-                <img
-                  src="images/icons/icon-phone.png"
-                  class="icon--phone"
-                  alt="phone"
-                >
-                Contact Us
-              </div>
+              <img
+                src="images/Button-contact-us.svg"
+                alt="Contact-us"
+              />
             </a>
           </li>
         </ul>
       </nav>
-      <!-- </div> -->
     </aside>
 
     <main>
@@ -175,14 +162,197 @@
         class="products"
         id="products"
       >
-        <h1>What we bake</h1>
+        <div class="grid grid--section">
+          <h2 class="section__title">What we bake</h2>
+
+          <p class="section__text">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+        </div>
+        <div class="grid grid--products-list">
+          <!-- item 1 -->
+          <div class="products__item">
+            <div class="products__product">
+              <img
+                src="../src/images/Product1.png"
+                alt="Cakes1"
+              />
+
+              <h3 class="products__group">Cakes</h3>
+
+              <p class="products__text">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a href="#">
+                <img
+                  src="images/Button-order.svg"
+                  alt="Order"
+                />
+              </a>
+            </div>
+          </div>
+
+          <!-- item 2 -->
+          <div class="products__item">
+            <div class="products__product">
+              <img
+                src="../src/images/Product2.png"
+                alt="Cakes1"
+              />
+
+              <h3 class="products__group">Cakes</h3>
+
+              <p class="products__text">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+
+              <a href="#">
+                <img
+                  src="images/Button-order.svg"
+                  alt="Order"
+                />
+              </a>
+            </div>
+          </div>
+
+          <!-- item 3 -->
+          <div class="products__item">
+            <div class="products__product">
+              <img
+                src="../src/images/Product3.png"
+                alt="Cakes1"
+              />
+
+              <h3 class="products__group">Donuts</h3>
+
+              <p class="products__text">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+
+              <a href="#">
+                <img
+                  class="products__button"
+                  src="images/Button-order.svg"
+                  alt="Order"
+                />
+              </a>
+            </div>
+          </div>
+
+          <!-- item 4 -->
+          <div class="products__item">
+            <div class="products__product">
+              <img
+                src="../src/images/Product4.png"
+                alt="Cakes1"
+              />
+
+              <h3 class="products__group">Donuts</h3>
+
+              <p class="products__text">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+
+              <a href="#">
+                <img
+                  src="images/Button-order.svg"
+                  alt="Order"
+                />
+              </a>
+            </div>
+          </div>
+
+          <!-- item 5 -->
+          <div class="products__item">
+            <div class="products__product">
+              <img
+                src="../src/images/Product5.png"
+                alt="Cakes1"
+              />
+
+              <h3 class="products__group">Cakes</h3>
+
+              <p class="products__text">
+                Cake with chocolate salted caramel, Vanilla frutti pebbles
+                inside
+              </p>
+
+              <a href="#">
+                <img
+                  src="images/Button-order.svg"
+                  alt="Order"
+                />
+              </a>
+            </div>
+          </div>
+
+          <!-- item 6 -->
+          <div class="products__item">
+            <div class="products__product">
+              <img
+                src="../src/images/Product6.png"
+                alt="Cakes1"
+              />
+
+              <h3 class="products__group">Cookies</h3>
+
+              <p class="products__text">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a href="#">
+                <img
+                  src="images/Button-order.svg"
+                  alt="Order"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section
-        class="about_us"
-        id="about_us"
+        class="about"
+        id="about-us"
       >
-        <h1>Few words about usaaa</h1>
+        <div class="about__container">
+          <div class="grid">
+            <h2 class="about__title">Few words about us</h2>
+
+            <p class="about__text">
+              Like many design teams, Onfido made the transition from Abstract +
+              Sketch, to Figma in the last couple of years. One of the common
+              resistance points internally before making that switch, was
+              Figma’s lack of Git-style branching that Abstract enabled. The
+              design team had come to rely on branching and had built a lot of
+              our processes around it.
+            </p>
+            <div class="about__item">
+              <span class="about__item-count">2015</span>
+              Foundation year
+            </div>
+
+            <div class="about__item">
+              <span class="about__item-count">23</span>
+              Stores
+            </div>
+
+            <div class="about__item">
+              <span class="about__item-count">155</span>
+              Companies
+            </div>
+
+            <div class="about__item">
+              <span class="about__item-count">10K+</span>
+              Clients
+            </div>
+          </div>
+        </div>
       </section>
 
       <section
@@ -191,15 +361,138 @@
       >
         <h1></h1>
       </section>
-
-      <section
-        class="contact_us"
-        id="contact_us"
-      >
-        <h1></h1>
-      </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="grid">
+        <div class="footer__top">
+          <a href="#">
+            <img
+              src="images/Logo-white.svg"
+              class="footer__logo"
+              alt="Creative Bakery logo"
+            />
+          </a>
+        </div>
+
+        <div class="footer__menu">
+          <h3 class="footer__subtitle">Menu</h3>
+
+          <nav class="nav">
+            <ul class="nav__list nav__list--footer">
+              <li class="nav__item nav__item--footer">
+                <a
+                  class="nav__link"
+                  href="#products"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item nav__item--footer">
+                <a
+                  class="nav__link"
+                  href="#about_us"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="nav__item nav__item--footer">
+                <a
+                  class="nav__link"
+                  href="#blog"
+                >
+                  Blog
+                </a>
+              </li>
+              <li class="nav__item nav__item--footer">
+                <a
+                  class="nav__link"
+                  href="#blog"
+                >
+                  Terms & Privacy
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__contacts">
+          <h3 class="footer__title">Contact us</h3>
+        </div>
+
+        <div class="footer__call-us">
+          <h3 class="footer__subtitle">Call us</h3>
+
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a
+                class="footer__link"
+                href="tel:6295550129"
+              >
+                (629) 555-0129
+              </a>
+            </li>
+
+            <li class="footer__item">
+              <a
+                class="footer__link"
+                href="#"
+              >
+                (603) 555-0123
+              </a>
+            </li>
+
+            <li class="footer__item">
+              <a
+                class="footer__link"
+                href="#"
+              >
+                (704) 555-0127
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__email-us">
+          <h3 class="footer__subtitle">Email us</h3>
+
+          <div class="footer__email">bakerlab@example.com</div>
+        </div>
+
+        <div class="footer__socials">
+          <a
+            class="icon"
+            href="#"
+          >
+            <img
+              src="images/icons/Icon-facebook.svg"
+              alt="facebook icon"
+            />
+          </a>
+
+          <a
+            class="icon"
+            href="#"
+          >
+            <img
+              src="images/icons/Icon-instagram.svg"
+              alt="instagram icon"
+            />
+          </a>
+
+          <a
+            class="icon"
+            href="#"
+          >
+            <img
+              src="images/icons/Icon-twitter.svg"
+              alt="twitter icon"
+            />
+          </a>
+        </div>
+
+        <p class="footer__copyright">© Bakerlab 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
