add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       href="./styles/main.scss"
     />
   </head>
-  <body class="page" style="overflow-x: hidden;">
+  <body class="page">
     <header
       class="header"
       id="header"
