--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="/favicon.png"
+      type="image/x-icon"
+    />
   </head>
 
   <body class="page__body">
@@ -93,7 +98,12 @@
 
         <h1 class="header__title">Creative Bakery</h1>
 
-        <a class="header__button">Learn more</a>
+        <a
+          href="#about-us"
+          class="header__button"
+        >
+          Learn more
+        </a>
       </div>
     </header>
 
@@ -129,7 +139,7 @@
           <li class="nav__item nav__item--aside">
             <a
               class="nav__link"
-              href="#about_us"
+              href="#about-us"
             >
               About Us
             </a>
@@ -145,7 +155,7 @@
           <li class="nav__item nav__item--aside">
             <a
               class="nav__link"
-              href="#contact_us"
+              href="#contact-us"
             >
               <img
                 src="images/Button-contact-us.svg"
@@ -163,9 +173,9 @@
         id="products"
       >
         <div class="grid grid--section">
-          <h2 class="section__title">What we bake</h2>
+          <h2 class="products__title">What we bake</h2>
 
-          <p class="section__text">
+          <p class="products__text">
             We can customize our cookies right for your needs. Just imagine it
           </p>
         </div>
@@ -176,6 +186,7 @@
               <img
                 src="../src/images/Product1.png"
                 alt="Cakes1"
+                class="products__picture"
               />
 
               <h3 class="products__group">Cakes</h3>
@@ -185,10 +196,11 @@
                 chips
               </p>
 
-              <a href="#">
+              <a href="#about-us">
                 <img
                   src="images/Button-order.svg"
                   alt="Order"
+                  class="products__button"
                 />
               </a>
             </div>
@@ -199,7 +211,8 @@
             <div class="products__product">
               <img
                 src="../src/images/Product2.png"
-                alt="Cakes1"
+                alt="Cakes2"
+                class="products__picture"
               />
 
               <h3 class="products__group">Cakes</h3>
@@ -209,10 +222,11 @@
                 powder
               </p>
 
-              <a href="#">
+              <a href="#about-us">
                 <img
                   src="images/Button-order.svg"
                   alt="Order"
+                  class="products__button"
                 />
               </a>
             </div>
@@ -223,7 +237,8 @@
             <div class="products__product">
               <img
                 src="../src/images/Product3.png"
-                alt="Cakes1"
+                alt="Donuts1"
+                class="products__picture"
               />
 
               <h3 class="products__group">Donuts</h3>
@@ -233,7 +248,7 @@
                 “petals”
               </p>
 
-              <a href="#">
+              <a href="#about-us">
                 <img
                   class="products__button"
                   src="images/Button-order.svg"
@@ -248,7 +263,8 @@
             <div class="products__product">
               <img
                 src="../src/images/Product4.png"
-                alt="Cakes1"
+                alt="Donuts2"
+                class="products__picture"
               />
 
               <h3 class="products__group">Donuts</h3>
@@ -257,10 +273,11 @@
                 Light multi-layered croissant strewn with coconut and nuts
               </p>
 
-              <a href="#">
+              <a href="#about-us">
                 <img
                   src="images/Button-order.svg"
                   alt="Order"
+                  class="products__button"
                 />
               </a>
             </div>
@@ -271,7 +288,8 @@
             <div class="products__product">
               <img
                 src="../src/images/Product5.png"
-                alt="Cakes1"
+                alt="Cakes3"
+                class="products__picture"
               />
 
               <h3 class="products__group">Cakes</h3>
@@ -281,10 +299,11 @@
                 inside
               </p>
 
-              <a href="#">
+              <a href="#about-us">
                 <img
                   src="images/Button-order.svg"
                   alt="Order"
+                  class="products__button"
                 />
               </a>
             </div>
@@ -295,7 +314,8 @@
             <div class="products__product">
               <img
                 src="../src/images/Product6.png"
-                alt="Cakes1"
+                alt="Cookies1"
+                class="products__picture"
               />
 
               <h3 class="products__group">Cookies</h3>
@@ -305,10 +325,11 @@
                 chips
               </p>
 
-              <a href="#">
+              <a href="#about-us">
                 <img
                   src="images/Button-order.svg"
                   alt="Order"
+                  class="products__button"
                 />
               </a>
             </div>
@@ -363,7 +384,10 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer
+      class="footer"
+      id="contact-us"
+    >
       <div class="grid">
         <div class="footer__top">
           <a href="#">
@@ -391,7 +415,7 @@
               <li class="nav__item nav__item--footer">
                 <a
                   class="nav__link"
-                  href="#about_us"
+                  href="#about-us"
                 >
                   About Us
                 </a>
@@ -461,8 +485,10 @@
 
         <div class="footer__socials">
           <a
+            href="https://www.facebook.com"
+            target="_blank"
+            rel="noopener noreferrer"
             class="icon"
-            href="#"
           >
             <img
               src="images/icons/Icon-facebook.svg"
@@ -471,8 +497,10 @@
           </a>
 
           <a
+            href="https://www.instagram.com"
+            target="_blank"
+            rel="noopener noreferrer"
             class="icon"
-            href="#"
           >
             <img
               src="images/icons/Icon-instagram.svg"
@@ -481,8 +509,10 @@
           </a>
 
           <a
+            href="https://twitter.com"
+            target="_blank"
+            rel="noopener noreferrer"
             class="icon"
-            href="#"
           >
             <img
               src="images/icons/Icon-twitter.svg"
