--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,7 @@
     />
     <link
       rel="icon"
-      href="/favicon.png"
-      type="image/x-icon"
+      href="./favicon.png"
     />
   </head>
 
