fix min-width, tel format, icon type errors

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>Creative Bakery</title>
     <link
       rel="icon"
-      type="image"
+      type="image/png"
       href="./images/cookie.png"
     />
 
@@ -31,7 +31,7 @@
 
     <link
       rel="stylesheet"
-      href="./styles/style.scss"
+      href="./styles/style.css"
     />
   </head>
   <body class="page__body">
@@ -84,7 +84,7 @@
             </nav>
             <a
               class="menu__contact-us button button--contact-us"
-              href="tel:(629) 555-0129"
+              href="tel:629555-0129"
             >
               <div class="icon__wrapper">
                 <span class="icon icon--phone"></span>
@@ -151,7 +151,7 @@
         </nav>
         <a
           class="menu__contact-us button button--contact-us"
-          href="tel:(629) 555-0129"
+          href="tel:629555-0129"
         >
           <div class="icon__wrapper">
             <span class="icon icon--phone"></span>
@@ -483,7 +483,7 @@
                   <li class="contacts__item">
                     <a
                       class="contacts__link"
-                      href="tel: (629) 555-0129"
+                      href="tel:629555-0129"
                     >
                       (629) 555-0129
                     </a>
@@ -491,7 +491,7 @@
                   <li class="contacts__item">
                     <a
                       class="contacts__link"
-                      href="tel: (603) 555-0123"
+                      href="tel:603555-0123"
                     >
                       (603) 555-0123
                     </a>
@@ -499,7 +499,7 @@
                   <li class="contacts__item">
                     <a
                       class="contacts__link"
-                      href="tel: (704) 555-0127"
+                      href="tel:704555-0127"
                     >
                       (704) 555-0127
                     </a>
