--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,297 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/main.css"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__logo"></div>
+      <nav class="header__menu">
+        <ul>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li>
+            <a href="#">
+              <img
+                src="images/phone_icon.png"
+                alt="phone"
+              />
+              <span>Contact us</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__burger_menu">
+        <span></span>
+        <span></span>
+      </div>
+    </header>
+    <main>
+      <div class="creative_bakery">
+        <div class="creative_bakery__paragraph">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </div>
+        <h1>Creative bakery</h1>
+        <div class="creative_bakery__cookie"></div>
+        <div class="creative_bakery__learn_more">
+          <a
+            href="#"
+            class="learn_more"
+          >
+            <img
+              src="images/cookie_icon.png"
+              alt="cookie"
+            />
+            <span>Learn more</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="what_we_bake">
+        <h1>What we bake</h1>
+        <p>
+          We can customize our cookies right for your needs. Just imagine it
+        </p>
+        <div class="what_we_bake__examples">
+          <div class="what_we_bake__cakes">
+            <div class="what_we_bake__cakes_1">
+              <img
+                class="order_image"
+                src="images/we_bake_1.png"
+                alt="cakes"
+              />
+              <h3>Cakes</h3>
+              <p>
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#"
+                class="order_link"
+              >
+                <img
+                  class="order_link__image"
+                  src="images/arrow_right_icon.png"
+                  alt="arrow-right"
+                />
+                <span>Order</span>
+              </a>
+            </div>
+            <div class="what_we_bake__cakes_2">
+              <img
+                class="order_image"
+                src="images/we_bake_2.png"
+                alt="cakes"
+              />
+              <h3>Cakes</h3>
+              <p>
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+              <a
+                href="#"
+                class="order_link"
+              >
+                <img
+                  class="order_link__image"
+                  src="images/arrow_right_icon.png"
+                  alt="arrow-right"
+                />
+                <span>Order</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="what_we_bake__donuts">
+            <div class="what_we_bake__donuts_1">
+              <img
+                class="order_image"
+                src="images/we_bake_3.png"
+                alt="donuts"
+              />
+              <h3>Donuts</h3>
+              <p>
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+              <a
+                href="#"
+                class="order_link"
+              >
+                <img
+                  class="order_link__image"
+                  src="images/arrow_right_icon.png"
+                  alt="arrow-right"
+                />
+                <span>Order</span>
+              </a>
+            </div>
+            <div class="what_we_bake__donuts_2">
+              <img
+                class="order_image"
+                src="images/we_bake_4.png"
+                alt="donuts"
+              />
+              <h3>Donuts</h3>
+              <p>Light multi-layered croissant strewn with coconut and nuts</p>
+              <a
+                href="#"
+                class="order_link"
+              >
+                <img
+                  class="order_link__image"
+                  src="images/arrow_right_icon.png"
+                  alt="arrow-right"
+                />
+                <span>Order</span>
+                <span>Order</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="what_we_bake__cookies">
+            <div class="what_we_bake__cookies_1">
+              <img
+                class="order_image"
+                src="images/we_bake_5.png"
+                alt="cookies"
+              />
+              <h3>Cakes</h3>
+              <p>OChocolate salted caramel, Vanilla frutti pebbles</p>
+              <a
+                href="#"
+                class="order_link"
+              >
+                <img
+                  class="order_link__image"
+                  src="images/arrow_right_icon.png"
+                  alt="arrow-right"
+                />
+                <span>Order</span>
+              </a>
+            </div>
+            <div class="what_we_bake__cookies_2">
+              <img
+                class="order_image"
+                src="images/we_bake_6.png"
+                alt="cookies"
+              />
+              <h3>Cookies</h3>
+              <p>
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#"
+                class="order_link"
+              >
+                <img
+                  class="order_link__image"
+                  src="images/arrow_right_icon.png"
+                  alt="arrow-right"
+                />
+                <span>Order</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="about_us">
+        <img
+          class="about_us__image"
+          src="images/Crumbs.png"
+          alt="crumbs"
+        />
+        <div class="about_us__text_info">
+          <h1>
+            Few words
+            <br />
+            About us
+          </h1>
+          <p>
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+        </div>
+
+        <div class="about_us__data_info">
+          <div class="about_us__year">
+            <h2>2015</h2>
+            <span class="data_span">Foundation year</span>
+          </div>
+
+          <div class="about_us__stores">
+            <h2>23</h2>
+            <span class="data_span">Stores</span>
+          </div>
+
+          <div class="about_us__companies">
+            <h2>155</h2>
+            <span class="data_span">Companies</span>
+          </div>
+
+          <div class="about_us__clients">
+            <h2>10k+</h2>
+            <span class="data_span">Clients</span>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="company_navigation">
+        <div class="company_navigation__logo"></div>
+        <nav>
+          <ul>
+            <li class="link_item"><a href="#">Products</a></li>
+            <li class="link_item"><a href="#">Menu</a></li>
+            <li class="link_item"><a href="#">About Us</a></li>
+            <li class="link_item"><a href="#">Blog</a></li>
+            <li class="link_item"><a href="#">Terms & Privacy</a></li>
+          </ul>
+        </nav>
+        <div class="company_navigation__networks">
+          <img
+            src="images/facebook_icon.png"
+            alt="facebook"
+          />
+          <img
+            src="images/instagram_icon.png"
+            alt="instagram"
+          />
+          <img
+            src="images/twitter_icon.png"
+            alt="twitter"
+          />
+        </div>
+      </div>
+      <div class="contact_us">
+        <h1>Contact us</h1>
+        <div class="contact_us__contacts_lists">
+          <ul>
+            <li class="link_item"><a href="#">Call us</a></li>
+            <li class="link_item"><a href="#">(629) 555-0129</a></li>
+            <li class="link_item"><a href="#">(603) 555-0123</a></li>
+            <li class="link_item"><a href="#">(704) 555-0127</a></li>
+          </ul>
+          <ul>
+            <li class="link_item"><a href="#">Email us</a></li>
+            <li class="link_item"><a href="#">bakerlab@example.com</a></li>
+          </ul>
+        </div>
+        <p>© Bakerlab 2022</p>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
