add xmark in burger-menu and changed style of crumbs

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
         </ul>
       </nav>
       <div class="header__burger_menu">
-        <span></span>
-        <span></span>
+        <span class="burger_span"></span>
+        <span class="burger_span"></span>
       </div>
     </header>
     <main>
